Update pharmacy options in farmacias.html

--- a/farmacias.html
+++ b/farmacias.html
@@ -170,8 +170,8 @@
               <div class="pill active">Abiertas ahora</div>
               <div class="pill">Guardia 24hs</div>
               <div class="pill">Cerca de mí</div>
-              <div class="pill">Descuento PAMI</div>
-              <div class="pill">Swiss Medical</div>
+              <div class="pill">Grupo Salud</div>
+              <div class="pill">PAMI</div>
               <div class="pill">Galeno</div>
               <div class="pill">OMINT</div>
             </div>
