--- a/documentos-estudios.html
+++ b/documentos-estudios.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8" />
   <title>Documentos y Estudios - C.U.R.A.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
+
   <style>
     :root {
       --main-bg: #f0f4f8; 
@@ -18,9 +24,16 @@
       --red-status: #ef4444;
     }
 
+    /* --- FIX: ESTABILIDAD DE PANTALLA --- */
+    html {
+      overflow-y: scroll; /* Reserva espacio para el scroll */
+      scrollbar-width: none; 
+    }
+    ::-webkit-scrollbar { display: none; }
+
     * {
       box-sizing: border-box;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 0;
     }
@@ -30,6 +43,7 @@
       display: flex;
       justify-content: center;
       min-height: 100vh;
+      overflow-x: hidden;
     }
 
     .app-shell {
@@ -37,10 +51,10 @@
       max-width: 414px;
       display: flex;
       flex-direction: column;
-      padding-bottom: 110px; 
+      padding-bottom: 120px; /* Unificado */
     }
 
-    /* --- HEADER BAR (PASTILLA) --- */
+    /* --- HEADER SIMÉTRICO --- */
     .header-bar {
       background-color: var(--blue-header);
       width: calc(100% - 40px);
@@ -49,31 +63,22 @@
       border-radius: 999px;
       display: flex;
       align-items: center;
+      justify-content: space-between;
       padding: 0 16px;
       box-shadow: 0 8px 20px rgba(0, 95, 163, 0.2);
+      z-index: 100;
     }
 
     .back-btn {
-      width: 36px;
-      height: 36px;
-      border-radius: 50%;
-      background: rgba(255,255,255,0.2);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      text-decoration: none;
-      font-size: 20px;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-      margin-right: 12px;
+      width: 36px; height: 36px; border-radius: 50%; background: rgba(255,255,255,0.2);
+      display: flex; align-items: center; justify-content: center; color: #fff; 
+      font-size: 22px; border: none; cursor: pointer; text-decoration: none;
     }
-
     .header-title { color: #ffffff; font-size: 18px; font-weight: 700; }
+    .header-spacer { width: 36px; height: 36px; }
 
     /* --- CONTENIDO --- */
-    .main-content { padding: 10px 20px; }
+    .main-content { padding: 10px 20px; flex: 1; }
 
     .card {
       background: var(--card-white);
@@ -90,189 +95,95 @@
       margin-bottom: 8px;
     }
 
-    .hint {
-      font-size: 13px;
-      color: var(--text-gray);
-      margin-bottom: 20px;
-      line-height: 1.4;
-    }
-
     /* --- FILTROS --- */
-    .filters {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-bottom: 16px;
-    }
-
+    .filters { display: flex; flex-direction: column; gap: 10px; margin-bottom: 16px; }
     .input-text, .select-field {
-      width: 100%;
-      padding: 14px;
-      border-radius: 16px;
-      border: 1px solid var(--border-soft);
-      font-size: 14px;
-      outline: none;
-      background: #f8fafc;
-      color: var(--text-dark);
+      width: 100%; padding: 14px; border-radius: 16px; border: 1px solid var(--border-soft);
+      font-size: 14px; outline: none; background: #f8fafc; color: var(--text-dark);
     }
-
     .filter-row { display: flex; gap: 10px; }
     .filter-row .select-field { flex: 1; }
 
-    .toggle-row {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      margin-top: 4px;
-    }
-
-    .toggle {
-      position: relative;
-      width: 44px;
-      height: 24px;
-      flex-shrink: 0;
-    }
-
+    .toggle-row { display: flex; align-items: center; gap: 12px; margin-top: 4px; }
+    .toggle { position: relative; width: 44px; height: 24px; flex-shrink: 0; }
     .toggle input { opacity: 0; width: 0; height: 0; }
-
     .slider {
-      position: absolute;
-      cursor: pointer;
-      inset: 0;
-      background-color: #cbd5e1;
-      border-radius: 999px;
-      transition: 0.3s;
+      position: absolute; cursor: pointer; inset: 0; background-color: #cbd5e1;
+      border-radius: 999px; transition: 0.3s;
     }
-
     .slider::before {
-      content: "";
-      position: absolute;
-      height: 18px;
-      width: 18px;
-      left: 3px;
-      top: 3px;
-      background-color: #fff;
-      border-radius: 50%;
-      transition: 0.3s;
+      content: ""; position: absolute; height: 18px; width: 18px; left: 3px; top: 3px;
+      background-color: #fff; border-radius: 50%; transition: 0.3s;
     }
-
     .toggle input:checked + .slider { background-color: var(--blue-main); }
     .toggle input:checked + .slider::before { transform: translateX(20px); }
-
     .toggle-text { font-size: 12px; color: var(--text-gray); line-height: 1.3; }
 
     /* --- LISTA DE DOCUMENTOS --- */
     .group-label {
-      font-size: 12px;
-      font-weight: 700;
-      color: var(--text-gray);
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
-      margin: 10px 0 10px 10px;
+      font-size: 12px; font-weight: 700; color: var(--text-gray);
+      text-transform: uppercase; letter-spacing: 0.5px; margin: 10px 0 10px 10px;
     }
 
     .doc-list { display: flex; flex-direction: column; gap: 12px; }
-
     .doc-card {
-      display: flex;
-      gap: 12px;
-      padding: 16px;
-      border-radius: 24px;
-      background: #f8fafc;
-      border: 1px solid var(--border-soft);
-      align-items: center;
+      display: flex; gap: 12px; padding: 16px; border-radius: 24px;
+      background: #f8fafc; border: 1px solid var(--border-soft); align-items: center;
     }
-
     .thumb {
-      width: 48px;
-      height: 48px;
-      border-radius: 14px;
-      background: var(--blue-soft);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 22px;
-      flex-shrink: 0;
+      width: 48px; height: 48px; border-radius: 14px; background: var(--blue-soft);
+      display: flex; align-items: center; justify-content: center; font-size: 22px; flex-shrink: 0;
     }
-
     .doc-main { flex: 1; min-width: 0; }
     .doc-name { font-size: 14px; font-weight: 700; color: var(--text-dark); margin-bottom: 2px; }
     .doc-meta { font-size: 11px; color: var(--text-gray); margin-bottom: 6px; }
 
     .doc-tags { display: flex; flex-wrap: wrap; gap: 4px; }
     .tag {
-      font-size: 10px;
-      font-weight: 700;
-      padding: 3px 8px;
-      border-radius: 6px;
-      background: #e2e8f0;
-      color: #475569;
+      font-size: 10px; font-weight: 700; padding: 3px 8px; border-radius: 6px;
+      background: #e2e8f0; color: #475569;
     }
     .tag-blue { background: var(--blue-soft); color: var(--blue-header); }
     .tag-red { background: #fee2e2; color: #991b1b; }
 
     .doc-actions { display: flex; flex-direction: column; gap: 6px; }
     .mini-btn {
-      padding: 8px 12px;
-      border-radius: 10px;
-      border: 1px solid var(--border-soft);
-      background: #fff;
-      font-size: 11px;
-      font-weight: 700;
-      color: var(--text-dark);
-      cursor: pointer;
-      white-space: nowrap;
+      padding: 8px 12px; border-radius: 10px; border: 1px solid var(--border-soft);
+      background: #fff; font-size: 11px; font-weight: 700; color: var(--text-dark);
+      cursor: pointer; white-space: nowrap;
     }
     .mini-btn.primary { background: var(--blue-main); color: #fff; border: none; }
 
     .muted-footer { font-size: 11px; color: var(--text-gray); text-align: center; margin-top: 20px; line-height: 1.4; }
 
-    /* --- NAV INFERIOR --- */
+    /* --- BOTTOM BAR (COPIA EXACTA) --- */
     .bottom-bar {
-      position: fixed;
-      bottom: 24px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 90%;
-      max-width: 360px;
-      background: #ffffff;
-      border-radius: 35px;
-      height: 70px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 25px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-      z-index: 50;
+      position: fixed; bottom: 24px; left: 50%; transform: translateX(-50%); width: 90%;
+      max-width: 360px; background: #ffffff; border-radius: 35px; height: 70px;
+      display: flex; align-items: center; justify-content: space-between; padding: 0 25px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1); z-index: 1000;
     }
-
-    .nav-icon-btn { background: none; border: none; padding: 10px; cursor: pointer; }
-    .nav-icon-btn svg { width: 26px; height: 26px; fill: var(--text-dark); }
-
-    .center-question-btn {
-      width: 64px;
-      height: 64px;
-      background: #0066cc;
-      border-radius: 50%;
-      border: 5px solid var(--main-bg); 
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 32px;
-      font-weight: 600;
-      margin-top: -35px; 
-      box-shadow: 0 8px 20px rgba(0, 102, 204, 0.3);
-      cursor: pointer;
+    .nav-icon-btn { background: none; border: none; padding: 10px; cursor: pointer; color: var(--text-gray); transition: all 0.2s; }
+    .nav-icon-btn.active { color: var(--blue-main); }
+    .nav-icon-btn i { font-size: 26px; }
+    
+    .center-question-btn { 
+      width: 64px; height: 64px; background: var(--blue-main); border-radius: 50%; 
+      border: 5px solid var(--main-bg); display: flex; align-items: center; 
+      justify-content: center; color: white; font-size: 32px; 
+      font-weight: 600; 
+      margin-top: -35px; box-shadow: 0 8px 20px rgba(31, 111, 229, 0.3); 
     }
+    .nav-icon-btn:active, .center-question-btn:active { transform: scale(0.9); }
   </style>
 </head>
 <body>
 
   <div class="app-shell">
     <header class="header-bar">
-      <button class="back-btn" onclick="history.back()">‹</button>
+      <button class="back-btn" onclick="history.back()"><i class="ph ph-caret-left"></i></button>
       <div class="header-title">Documentos y Estudios</div>
+      <div class="header-spacer"></div>
     </header>
 
     <main class="main-content">
@@ -389,13 +300,11 @@
     </main>
 
     <nav class="bottom-bar">
-      <button class="nav-icon-btn" onclick="location.href='menu (12).html'">
-        <svg viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
-      </button>
-      <div class="center-question-btn">?</div>
-      <button class="nav-icon-btn">
-        <svg viewBox="0 0 24 24"><path d="M12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"/></svg>
-      </button>
+      <button class="nav-icon-btn active" onclick="location.href='menu.html'"><i class="ph-bold ph-house"></i></button>
+      <button class="nav-icon-btn" onclick="location.href='turnos.html'"><i class="ph-bold ph-calendar-blank"></i></button>
+      <div class="center-question-btn" onclick="location.href='asistente.html'">?</div>
+      <button class="nav-icon-btn" onclick="location.href='farmacias.html'"><i class="ph-bold ph-prescription"></i></button>
+      <button class="nav-icon-btn" onclick="location.href='perfil.html'"><i class="ph-bold ph-user"></i></button>
     </nav>
   </div>
 
